# fax-transmitter

./: .env.example  .env.secrets.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-to-docker-hub.yml
src/: config.json  fax_processor.py
tests/: test_queue.py
