[tool.poetry]
name = "fax-transmitter"
version = "0.1.0"
description = ""
authors = ["Jay Grieves <jaygrieves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rococo = "^1.1.6"
pydantic = "^2.11.7"
requests = "^2.32.4"
boto3 = "^1.40.7"

[tool.poetry.group.dev.dependencies]
pika = "^1.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
